--- a/.templates/pandoc.html
+++ b/.templates/pandoc.html
@@ -14,6 +14,10 @@ a:hover {
 
 /*--- https://css-tricks.com/snippets/css/prevent-long-urls-from-breaking-out-of-container/ ---*/
 
+img {
+    width: 100%;
+}
+
 body {
     max-width: 35em;
     margin: 0 auto;
