Improve pandoc template, change tmux key binding

--- a/.templates/pandoc.html
+++ b/.templates/pandoc.html
@@ -8,6 +8,11 @@ a {
     color: black;
 }
 
+span.math.display {
+    text-align: center;
+    display: block;
+}
+
 a:hover {
     text-decoration: none;
 }
